GenCode/labwork/parser.output
Grammaire

    0 $accept: top $end

    1 top: opt_decls

    2 line: ε

    3 opt_decls: ε
    4          | decls

    5 decls: decl
    6      | decls decl

    7 decl: CONST line ID '=' expr
    8     | VAR line ID
    9     | REG line ID '@' expr
   10     | SIG line ID '@' ID '[' expr ']'
   11     | AUTO line ID opt_stmts states

   12 states: state
   13       | states state

   14 state: STATE line ID ':' opt_stmts opt_whens

   15 opt_whens: ε
   16          | whens

   17 whens: when
   18      | whens when

   19 when: WHEN line opt_not ID ':' opt_stmts

   20 opt_not: ε
   21        | '!'

   22 opt_stmts: ε
   23          | stmts

   24 stmts: stmt
   25      | stmts stmt

   26 stmt: ID line '=' expr
   27     | ID line '[' expr ']' '=' expr
   28     | ID line '[' expr DOTDOT expr ']' '=' expr
   29     | IF line cond THEN stmts ENDIF
   30     | IF line cond THEN stmts ELSE stmts ENDIF
   31     | GOTO line ID
   32     | STOP

   33 cond: expr '=' line expr
   34     | expr NE line expr
   35     | expr '<' line expr
   36     | expr LE line expr
   37     | expr '>' line expr
   38     | expr GE line expr
   39     | NOT line cond
   40     | cond AND line cond
   41     | cond OR line cond
   42     | '(' cond ')'

   43 expr: atom
   44     | expr '+' line expr
   45     | expr '-' line expr
   46     | expr '*' line expr
   47     | expr '/' line expr
   48     | expr '%' line expr
   49     | expr '&' line expr
   50     | expr '|' line expr
   51     | expr '^' line expr
   52     | expr LT2 line expr
   53     | expr GT2 line expr
   54     | expr LT3 line expr
   55     | expr GT3 line expr

   56 atom: INT line
   57     | ID line
   58     | atom '[' expr ']'
   59     | atom '[' expr DOTDOT expr ']'
   60     | '~' line atom
   61     | '-' line atom
   62     | '+' line atom
   63     | '(' expr ')'


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' (33) 21
    '%' (37) 48
    '&' (38) 49
    '(' (40) 42 63
    ')' (41) 42 63
    '*' (42) 46
    '+' (43) 44 62
    '-' (45) 45 61
    '/' (47) 47
    ':' (58) 14 19
    '<' (60) 35
    '=' (61) 7 26 27 28 33
    '>' (62) 37
    '@' (64) 9 10
    '[' (91) 10 27 28 58 59
    ']' (93) 10 27 28 58 59
    '^' (94) 51
    '|' (124) 50
    '~' (126) 60
    error (256)
    ID <char *> (258) 7 8 9 10 11 14 19 26 27 28 31 57
    INT <long int> (259) 56
    DOTDOT (260) 28 59
    GE (261) 38
    LE (262) 36
    NE (263) 34
    AND (264) 40
    AUTO (265) 11
    CONST (266) 7
    ELSE (267) 30
    ENDIF (268) 29 30
    GOTO (269) 31
    GT2 (270) 53
    GT3 (271) 55
    IF (272) 29 30
    LT2 (273) 52
    LT3 (274) 54
    NOT (275) 39
    OR (276) 41
    REG (277) 9
    SIG (278) 10
    STATE (279) 14
    STOP (280) 32
    THEN (281) 29 30
    VAR (282) 8
    WHEN (283) 19


Non-terminaux, suivis des règles où ils apparaissent

    $accept (48)
        à gauche: 0
    top (49)
        à gauche: 1
        à droite: 0
    line <int> (50)
        à gauche: 2
        à droite: 7 8 9 10 11 14 19 26 27 28 29 30 31 33 34 35 36 37 38 39 40 41 44 45 46 47 48 49 50 51 52 53 54 55 56 57 60 61 62
    opt_decls (51)
        à gauche: 3 4
        à droite: 1
    decls (52)
        à gauche: 5 6
        à droite: 4 6
    decl (53)
        à gauche: 7 8 9 10 11
        à droite: 5 6
    states (54)
        à gauche: 12 13
        à droite: 11 13
    state (55)
        à gauche: 14
        à droite: 12 13
    opt_whens (56)
        à gauche: 15 16
        à droite: 14
    whens (57)
        à gauche: 17 18
        à droite: 16 18
    when (58)
        à gauche: 19
        à droite: 17 18
    opt_not <bool> (59)
        à gauche: 20 21
        à droite: 19
    opt_stmts <Statement *> (60)
        à gauche: 22 23
        à droite: 11 14 19
    stmts <Statement *> (61)
        à gauche: 24 25
        à droite: 23 25 29 30
    stmt <Statement *> (62)
        à gauche: 26 27 28 29 30 31 32
        à droite: 24 25
    cond <Condition *> (63)
        à gauche: 33 34 35 36 37 38 39 40 41 42
        à droite: 29 30 39 40 41 42
    expr <Expression *> (64)
        à gauche: 43 44 45 46 47 48 49 50 51 52 53 54 55
        à droite: 7 9 10 26 27 28 33 34 35 36 37 38 44 45 46 47 48 49 50 51 52 53 54 55 58 59 63
    atom <Expression *> (65)
        à gauche: 56 57 58 59 60 61 62 63
        à droite: 43 58 59 60 61 62


État 0

    0 $accept: • top $end

    AUTO   décalage et aller à l'état 1
    CONST  décalage et aller à l'état 2
    REG    décalage et aller à l'état 3
    SIG    décalage et aller à l'état 4
    VAR    décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 3 (opt_decls)

    top        aller à l'état 6
    opt_decls  aller à l'état 7
    decls      aller à l'état 8
    decl       aller à l'état 9


État 1

   11 decl: AUTO • line ID opt_stmts states

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 10


État 2

    7 decl: CONST • line ID '=' expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 11


État 3

    9 decl: REG • line ID '@' expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 12


État 4

   10 decl: SIG • line ID '@' ID '[' expr ']'

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 13


État 5

    8 decl: VAR • line ID

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 14


État 6

    0 $accept: top • $end

    $end  décalage et aller à l'état 15


État 7

    1 top: opt_decls •

    $défaut  réduction par utilisation de la règle 1 (top)


État 8

    4 opt_decls: decls •
    6 decls: decls • decl

    AUTO   décalage et aller à l'état 1
    CONST  décalage et aller à l'état 2
    REG    décalage et aller à l'état 3
    SIG    décalage et aller à l'état 4
    VAR    décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 4 (opt_decls)

    decl  aller à l'état 16


État 9

    5 decls: decl •

    $défaut  réduction par utilisation de la règle 5 (decls)


État 10

   11 decl: AUTO line • ID opt_stmts states

    ID  décalage et aller à l'état 17


État 11

    7 decl: CONST line • ID '=' expr

    ID  décalage et aller à l'état 18


État 12

    9 decl: REG line • ID '@' expr

    ID  décalage et aller à l'état 19


État 13

   10 decl: SIG line • ID '@' ID '[' expr ']'

    ID  décalage et aller à l'état 20


État 14

    8 decl: VAR line • ID

    ID  décalage et aller à l'état 21


État 15

    0 $accept: top $end •

    $défaut  accepter


État 16

    6 decls: decls decl •

    $défaut  réduction par utilisation de la règle 6 (decls)


État 17

   11 decl: AUTO line ID • opt_stmts states

    ID    décalage et aller à l'état 22
    GOTO  décalage et aller à l'état 23
    IF    décalage et aller à l'état 24
    STOP  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 22 (opt_stmts)

    opt_stmts  aller à l'état 26
    stmts      aller à l'état 27
    stmt       aller à l'état 28


État 18

    7 decl: CONST line ID • '=' expr

    '='  décalage et aller à l'état 29


État 19

    9 decl: REG line ID • '@' expr

    '@'  décalage et aller à l'état 30


État 20

   10 decl: SIG line ID • '@' ID '[' expr ']'

    '@'  décalage et aller à l'état 31


État 21

    8 decl: VAR line ID •

    $défaut  réduction par utilisation de la règle 8 (decl)


État 22

   26 stmt: ID • line '=' expr
   27     | ID • line '[' expr ']' '=' expr
   28     | ID • line '[' expr DOTDOT expr ']' '=' expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 32


État 23

   31 stmt: GOTO • line ID

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 33


État 24

   29 stmt: IF • line cond THEN stmts ENDIF
   30     | IF • line cond THEN stmts ELSE stmts ENDIF

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 34


État 25

   32 stmt: STOP •

    $défaut  réduction par utilisation de la règle 32 (stmt)


État 26

   11 decl: AUTO line ID opt_stmts • states

    STATE  décalage et aller à l'état 35

    states  aller à l'état 36
    state   aller à l'état 37


État 27

   23 opt_stmts: stmts •
   25 stmts: stmts • stmt

    ID    décalage et aller à l'état 22
    GOTO  décalage et aller à l'état 23
    IF    décalage et aller à l'état 24
    STOP  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 23 (opt_stmts)

    stmt  aller à l'état 38


État 28

   24 stmts: stmt •

    $défaut  réduction par utilisation de la règle 24 (stmts)


État 29

    7 decl: CONST line ID '=' • expr

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    expr  aller à l'état 45
    atom  aller à l'état 46


État 30

    9 decl: REG line ID '@' • expr

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    expr  aller à l'état 47
    atom  aller à l'état 46


État 31

   10 decl: SIG line ID '@' • ID '[' expr ']'

    ID  décalage et aller à l'état 48


État 32

   26 stmt: ID line • '=' expr
   27     | ID line • '[' expr ']' '=' expr
   28     | ID line • '[' expr DOTDOT expr ']' '=' expr

    '['  décalage et aller à l'état 49
    '='  décalage et aller à l'état 50


État 33

   31 stmt: GOTO line • ID

    ID  décalage et aller à l'état 51


État 34

   29 stmt: IF line • cond THEN stmts ENDIF
   30     | IF line • cond THEN stmts ELSE stmts ENDIF

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    NOT  décalage et aller à l'état 52
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 53

    cond  aller à l'état 54
    expr  aller à l'état 55
    atom  aller à l'état 46


État 35

   14 state: STATE • line ID ':' opt_stmts opt_whens

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 56


État 36

   11 decl: AUTO line ID opt_stmts states •
   13 states: states • state

    STATE  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 11 (decl)

    state  aller à l'état 57


État 37

   12 states: state •

    $défaut  réduction par utilisation de la règle 12 (states)


État 38

   25 stmts: stmts stmt •

    $défaut  réduction par utilisation de la règle 25 (stmts)


État 39

   57 atom: ID • line

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 58


État 40

   56 atom: INT • line

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 59


État 41

   60 atom: '~' • line atom

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 60


État 42

   62 atom: '+' • line atom

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 61


État 43

   61 atom: '-' • line atom

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 62


État 44

   63 atom: '(' • expr ')'

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    expr  aller à l'état 63
    atom  aller à l'état 46


État 45

    7 decl: CONST line ID '=' expr •
   44 expr: expr • '+' line expr
   45     | expr • '-' line expr
   46     | expr • '*' line expr
   47     | expr • '/' line expr
   48     | expr • '%' line expr
   49     | expr • '&' line expr
   50     | expr • '|' line expr
   51     | expr • '^' line expr
   52     | expr • LT2 line expr
   53     | expr • GT2 line expr
   54     | expr • LT3 line expr
   55     | expr • GT3 line expr

    GT2  décalage et aller à l'état 64
    GT3  décalage et aller à l'état 65
    LT2  décalage et aller à l'état 66
    LT3  décalage et aller à l'état 67
    '+'  décalage et aller à l'état 68
    '-'  décalage et aller à l'état 69
    '*'  décalage et aller à l'état 70
    '/'  décalage et aller à l'état 71
    '%'  décalage et aller à l'état 72
    '&'  décalage et aller à l'état 73
    '|'  décalage et aller à l'état 74
    '^'  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 7 (decl)


État 46

   43 expr: atom •
   58 atom: atom • '[' expr ']'
   59     | atom • '[' expr DOTDOT expr ']'

    '['  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 43 (expr)


État 47

    9 decl: REG line ID '@' expr •
   44 expr: expr • '+' line expr
   45     | expr • '-' line expr
   46     | expr • '*' line expr
   47     | expr • '/' line expr
   48     | expr • '%' line expr
   49     | expr • '&' line expr
   50     | expr • '|' line expr
   51     | expr • '^' line expr
   52     | expr • LT2 line expr
   53     | expr • GT2 line expr
   54     | expr • LT3 line expr
   55     | expr • GT3 line expr

    GT2  décalage et aller à l'état 64
    GT3  décalage et aller à l'état 65
    LT2  décalage et aller à l'état 66
    LT3  décalage et aller à l'état 67
    '+'  décalage et aller à l'état 68
    '-'  décalage et aller à l'état 69
    '*'  décalage et aller à l'état 70
    '/'  décalage et aller à l'état 71
    '%'  décalage et aller à l'état 72
    '&'  décalage et aller à l'état 73
    '|'  décalage et aller à l'état 74
    '^'  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 9 (decl)


État 48

   10 decl: SIG line ID '@' ID • '[' expr ']'

    '['  décalage et aller à l'état 77


État 49

   27 stmt: ID line '[' • expr ']' '=' expr
   28     | ID line '[' • expr DOTDOT expr ']' '=' expr

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    expr  aller à l'état 78
    atom  aller à l'état 46


État 50

   26 stmt: ID line '=' • expr

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    expr  aller à l'état 79
    atom  aller à l'état 46


État 51

   31 stmt: GOTO line ID •

    $défaut  réduction par utilisation de la règle 31 (stmt)


État 52

   39 cond: NOT • line cond

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 80


État 53

   42 cond: '(' • cond ')'
   63 atom: '(' • expr ')'

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    NOT  décalage et aller à l'état 52
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 53

    cond  aller à l'état 81
    expr  aller à l'état 82
    atom  aller à l'état 46


État 54

   29 stmt: IF line cond • THEN stmts ENDIF
   30     | IF line cond • THEN stmts ELSE stmts ENDIF
   40 cond: cond • AND line cond
   41     | cond • OR line cond

    AND   décalage et aller à l'état 83
    OR    décalage et aller à l'état 84
    THEN  décalage et aller à l'état 85


État 55

   33 cond: expr • '=' line expr
   34     | expr • NE line expr
   35     | expr • '<' line expr
   36     | expr • LE line expr
   37     | expr • '>' line expr
   38     | expr • GE line expr
   44 expr: expr • '+' line expr
   45     | expr • '-' line expr
   46     | expr • '*' line expr
   47     | expr • '/' line expr
   48     | expr • '%' line expr
   49     | expr • '&' line expr
   50     | expr • '|' line expr
   51     | expr • '^' line expr
   52     | expr • LT2 line expr
   53     | expr • GT2 line expr
   54     | expr • LT3 line expr
   55     | expr • GT3 line expr

    GE   décalage et aller à l'état 86
    LE   décalage et aller à l'état 87
    NE   décalage et aller à l'état 88
    GT2  décalage et aller à l'état 64
    GT3  décalage et aller à l'état 65
    LT2  décalage et aller à l'état 66
    LT3  décalage et aller à l'état 67
    '+'  décalage et aller à l'état 68
    '-'  décalage et aller à l'état 69
    '*'  décalage et aller à l'état 70
    '/'  décalage et aller à l'état 71
    '%'  décalage et aller à l'état 72
    '&'  décalage et aller à l'état 73
    '|'  décalage et aller à l'état 74
    '^'  décalage et aller à l'état 75
    '='  décalage et aller à l'état 89
    '<'  décalage et aller à l'état 90
    '>'  décalage et aller à l'état 91


État 56

   14 state: STATE line • ID ':' opt_stmts opt_whens

    ID  décalage et aller à l'état 92


État 57

   13 states: states state •

    $défaut  réduction par utilisation de la règle 13 (states)


État 58

   57 atom: ID line •

    $défaut  réduction par utilisation de la règle 57 (atom)


État 59

   56 atom: INT line •

    $défaut  réduction par utilisation de la règle 56 (atom)


État 60

   60 atom: '~' line • atom

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    atom  aller à l'état 93


État 61

   62 atom: '+' line • atom

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    atom  aller à l'état 94


État 62

   61 atom: '-' line • atom

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    atom  aller à l'état 95


État 63

   44 expr: expr • '+' line expr
   45     | expr • '-' line expr
   46     | expr • '*' line expr
   47     | expr • '/' line expr
   48     | expr • '%' line expr
   49     | expr • '&' line expr
   50     | expr • '|' line expr
   51     | expr • '^' line expr
   52     | expr • LT2 line expr
   53     | expr • GT2 line expr
   54     | expr • LT3 line expr
   55     | expr • GT3 line expr
   63 atom: '(' expr • ')'

    GT2  décalage et aller à l'état 64
    GT3  décalage et aller à l'état 65
    LT2  décalage et aller à l'état 66
    LT3  décalage et aller à l'état 67
    '+'  décalage et aller à l'état 68
    '-'  décalage et aller à l'état 69
    '*'  décalage et aller à l'état 70
    '/'  décalage et aller à l'état 71
    '%'  décalage et aller à l'état 72
    '&'  décalage et aller à l'état 73
    '|'  décalage et aller à l'état 74
    '^'  décalage et aller à l'état 75
    ')'  décalage et aller à l'état 96


État 64

   53 expr: expr GT2 • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 97


État 65

   55 expr: expr GT3 • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 98


État 66

   52 expr: expr LT2 • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 99


État 67

   54 expr: expr LT3 • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 100


État 68

   44 expr: expr '+' • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 101


État 69

   45 expr: expr '-' • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 102


État 70

   46 expr: expr '*' • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 103


État 71

   47 expr: expr '/' • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 104


État 72

   48 expr: expr '%' • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 105


État 73

   49 expr: expr '&' • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 106


État 74

   50 expr: expr '|' • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 107


État 75

   51 expr: expr '^' • line expr

    $défaut  réduction par utilisation de la règle 2 (line)

    line  aller à l'état 108


État 76

   58 atom: atom '[' • expr ']'
   59     | atom '[' • expr DOTDOT expr ']'

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    expr  aller à l'état 109
    atom  aller à l'état 46


État 77

   10 decl: SIG line ID '@' ID '[' • expr ']'

    ID   décalage et aller à l'état 39
    INT  décalage et aller à l'état 40
    '~'  décalage et aller à l'état 41
    '+'  décalage et aller à l'état 42
    '-'  décalage et aller à l'état 43
    '('  décalage et aller à l'état 44

    expr  aller à l'état 110
    atom  aller à l'état 46


État 78

   27 stmt: ID line '[' expr • ']' '=' expr
   28     | ID line '[' expr • DOTDOT expr ']' '=' expr
   44 expr: expr • '+' line expr
   45     | expr • '-' line expr
   46     | expr • '*' line expr
   47     | expr • '/' line expr
   48     | expr • '%' line expr
   49     | expr • '&' line expr
   50     | expr • '|' line expr
   51     | expr • '^' line expr
   52     | expr • LT2 line expr
   53     | expr • GT2 line expr
   54     | expr • LT3 line expr
   55     | expr • GT3 line expr

    DOTDOT  décalage et aller à l'état 111
    GT2     décalage et aller à l'état 64
    GT3     décalage et aller à l'état 65
    LT2     décalage et aller à l'état 66
    LT3     décalage et aller à l'état 67
    '+'     décalage et aller à l'état 68
    '-'     décalage et aller à l'état 69
    '*'     décalage et aller à l'état 70
    '/'     décalage et aller à l'état 71
    '%'     décalage et aller à l'état 72
    '&'     décalage et aller à l'état 73
    '|'     décalage et aller à l'état 74
    '^'     décalage et aller à l'état 75
    ']'     décalage et aller à l'état 112


État 79

   26 stmt: ID line '=' expr •
   44 expr: expr • '+' line expr
   45     | expr • '-' line expr
   46     | expr • '*' line expr
   47     | expr • '/' line expr
   48     | expr • '%' line expr
   49     | expr • '&' line expr
   50     | expr • '|' line expr
   51     | expr • '^' line expr
   52     | expr • LT2 line expr
   53     | expr • GT2 line expr
   54     | expr • LT3 line expr
   55     | expr • GT3 line expr

    GT2  décalage et aller à l'état 64
    GT3  décalage et aller à l'état 65
    LT2  décalage et aller à l'état 66
    LT3  décalage et aller à l'état 67
    '+'  décalage et aller à l'état 68
    '-'  décalage et aller à l'état 69
    '*'  décalage et aller à l'état 70
    '/'  décalage et aller à l'état 71
    '%'  décalage et aller à l'état 72
    '&'  décalage et aller à l'état 73
    '|'  décalage et aller à l'état 74
    '^'  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 26 (stmt)


État 80

   39 cond: NOT line • cond
